# CUDA-GEMM-Optimization

./: .gitignore  build_and_run.sh  profile_cuda_gemm_fp16_results.txt  profile_cuda_gemm_fp32_results.txt
plot/: input.txt  plot.py
src/: CMakeLists.txt  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
